# title_parser

./: Cargo.toml  README.md
.github/workflows/: crate.yml  rust.yml  todo.yml
src/: jp.srt  jp.vtt  lib.rs  timecode.rs
