[package]
name = "title_parser"
version = "0.1.0"
edition = "2021"
description = "Library for parsing SRT and VTT title cues"
license-file = "LICENSE"
repository = "https://github.com/internet-diglett/title_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
